2012-01-07 Daniel Dressler <danieru.dressler@gmail.com>
	* lib/Foomatic/(sqlLayer.pm|xmlParse.pm|phonebook.pm):
	  Subdivided these into categories under 
	  lib/Foomatic/filters/*/ thus reducing clutter. I'm working on
	  refactoring (or at least moving arround) to get DB.pm down to
	  a managable size.

	* lib/Foomatic/DB.pm, foomatic-xml-to-sqlite.in:
	  Changed refernces to the above files to match their new homes.

	* foomatic-compiledb.in: Removed killing of childern threads. 
	  This speeds up generating the ppd db by letting the cache fill
	  with drivers and options.
	  Achived a complete ppd build in ~4 minutes using a child worker
	  thread for each core of my early 2009 quad core amd.
	  Should be noted that the c xml parers had no caching so this
	  speed up does not work in 4 series foomatic.

2012-01-06 Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Fixed typo in get_combo_data_from_sql_db()
	  method.

2012-01-06 Jeff Licquia <licquia@linuxfoundation.org>

	* lib/Foomatic/DB.pm: Optimized regexps in the normalize() function
	  and removed unneeded calls of normalize(), vastly improving speed
	  of printer search operations, as they are done for queries via
	  the web query API on the OpenPrinting web server.

2011-12-23 Daniel Dressler <danieru.dressler@gmail.com>

	* foomatic-test-build.in: finished this test script.
	  The script has already helped, turns out I had a error
	  in my standard build process that meant I wasn't
	  actaully building the new sources. I whiched foomatic-
	  test-build to use the standard perl option parsing
	  functions.

2011-12-17 Daniel Dressler <danieru.dressler@gmail.com>

	* unit-test/: I'm reverting my addition of this folder.
	  I do not want to mess with the build script. Maybe
	  sometime when I am more familiar with the scripts I'll
	  feel safe adding a new directory.

	* foomatic-test-build.ln: added work in progress automated
	  build script. Will make the write&test process faster.
